--- a/network_building/BackBoning.ipynb
+++ b/network_building/BackBoning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "id": "yellow-convertible",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "absent-occurrence",
    "metadata": {},
    "outputs": [],
@@ -28,17 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "bearing-referral",
    "metadata": {},
    "outputs": [],
    "source": [
-    "table, nnodes, nnedges = bb.read('../data/tuscanyBBW.csv',column_of_interest='w',sep= ' ', undirected = True)"
+    "table, nnodes, nnedges = bb.read('../data/tuscany_backboned.csv',column_of_interest='w',sep= ' ', undirected = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "announced-disease",
    "metadata": {},
    "outputs": [
@@ -56,24 +56,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "id": "enormous-smart",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "136686"
+       "46879"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nc_backbone = bb.thresholding(nc_table, 200)\n",
+    "nc_backbone = bb.thresholding(nc_table, 600)\n",
     "len(nc_backbone)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "automotive-cambridge",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14978"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(nc_backbone.src.append(nc_backbone.trg)))"
    ]
   },
   {
