--- a/community_discovery/codes/Static Community Discovery.ipynb
+++ b/community_discovery/codes/Static Community Discovery.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "chronic-tiffany",
    "metadata": {
     "scrolled": true
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "straight-picnic",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "maritime-wrist",
    "metadata": {},
    "outputs": [],
@@ -996,33 +996,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "satellite-divorce",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'province': 'pisa', 'kmeans': '4', 'louvain': 7, 'greedy_modularity': 0}\n",
-      "{'province': 'florence', 'kmeans': '3', 'louvain': 7, 'greedy_modularity': 0}\n",
-      "{'province': 'florence', 'kmeans': '3', 'louvain': 7, 'greedy_modularity': 0}\n",
-      "{'province': 'florence', 'kmeans': '3', 'louvain': 7, 'greedy_modularity': 0}\n",
-      "{'province': 'florence', 'kmeans': '3', 'louvain': 7, 'greedy_modularity': 0}\n",
-      "{'province': 'florence', 'kmeans': '3', 'louvain': 7, 'greedy_modularity': 0}\n",
-      "{'province': 'florence', 'kmeans': '1', 'louvain': 7, 'greedy_modularity': 0}\n",
-      "{'province': 'florence', 'kmeans': '3', 'louvain': 7, 'greedy_modularity': 0}\n",
-      "{'province': 'grosseto', 'kmeans': '2', 'louvain': 7, 'greedy_modularity': 0}\n",
-      "{'province': 'pistoia', 'kmeans': '1', 'louvain': 7, 'greedy_modularity': 0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "for node in list(G.nodes)[:10]: print(G.nodes[node])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "incredible-service",
    "metadata": {},
@@ -1084,7 +1057,14 @@
    "id": "788f0224",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "provincemapping = {i:e for i,e in enumerate(df.province.unique())}\n",
+    "for node in G.nodes:\n",
+    "    G.nodes[node]['provint'] = provincemapping[G.nodes[node]['province']]\n",
+    "    \n",
+    "leiden_p= cd.leiden(G, initial_membership = [G.nodes[node]['provint'] for node in G.nodes] weights='dissimilarity')\n",
+    "readwrite.write_community_json(leiden_p,'../data/communities/leiden_p.json')"
+   ]
   },
   {
    "cell_type": "code",
@@ -1161,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "id": "89a17c41",
    "metadata": {},
    "outputs": [],
@@ -1208,9 +1188,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cloudy-pantyhose",
+   "metadata": {},
+   "source": [
+    "### Rb / Rber Pots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "demonstrated-element",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "provinceMapping= { p:i for i,p in enumerate(df.province.unique())}\n",
+    "for node in G.nodes:\n",
+    "     G.nodes[node]['provint'] = provinceMapping[G.nodes[node]['province']]\n",
+    "                                            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "efficient-female",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'province': 'pisa', 'provint': 0}\n",
+      "{'province': 'florence', 'provint': 1}\n",
+      "{'province': 'florence', 'provint': 1}\n",
+      "{'province': 'florence', 'provint': 1}\n",
+      "{'province': 'florence', 'provint': 1}\n",
+      "{'province': 'florence', 'provint': 1}\n",
+      "{'province': 'florence', 'provint': 1}\n",
+      "{'province': 'florence', 'provint': 1}\n",
+      "{'province': 'grosseto', 'provint': 2}\n",
+      "{'province': 'pistoia', 'provint': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for node in list(G.nodes())[:10]: print(G.nodes[node])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "metric-hurricane",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "The graph object should be either a networkx or an igraph one.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-1ca960dd0087>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrb_pots\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrb_pots\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minitial_membership\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnode\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'provint'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mnode\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'dissimilarity'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mreadwrite\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite_community_json\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrb_pots\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'../data/communities/rb_pots.json'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\cdlib\\algorithms\\crisp_partition.py\u001b[0m in \u001b[0;36mrb_pots\u001b[1;34m(g_original, initial_membership, weights, resolution_parameter)\u001b[0m\n\u001b[0;32m    424\u001b[0m         \u001b[1;32mraise\u001b[0m \u001b[0mModuleNotFoundError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Optional dependency not satisfied: install igraph to use the selected feature.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    425\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 426\u001b[1;33m     \u001b[0mg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconvert_graph_formats\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mg_original\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGraph\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    427\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    428\u001b[0m     part = leidenalg.find_partition(g, leidenalg.RBConfigurationVertexPartition,\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\cdlib\\utils.py\u001b[0m in \u001b[0;36mconvert_graph_formats\u001b[1;34m(graph, desired_format, directed)\u001b[0m\n\u001b[0;32m    197\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    198\u001b[0m         raise TypeError(\n\u001b[1;32m--> 199\u001b[1;33m             \"The graph object should be either a networkx or an igraph one.\")\n\u001b[0m\u001b[0;32m    200\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    201\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: The graph object should be either a networkx or an igraph one."
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "rb_pots = cd.rb_pots( G, initial_membership =[G.nodes[node]['provint'] for node in G.nodes()],weights='dissimilarity')\n",
+    "readwrite.write_community_json(rb_pots,'../data/communities/rb_pots.json')\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b18375d5",
+   "id": "sweet-journalism",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assign(G,rb_pots,'rb_pots')\n",
+    "for node in G.nodes:\n",
+    "    df.loc[node,'rb_pots'] = str(G.nodes[node]['rb_pots'])\n",
+    "\n",
+    "sns.scatterplot(data = df[df.rb_pots.astype(int)<10], x='longitude',y='latitude',hue='rb_pots')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "corrected-examination",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "The graph object should be either a networkx or an igraph one.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-22-02bedffb9cfa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrber_pots\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrber_pots\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mreadwrite\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite_community_json\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrber_pots\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'../data/communities/rber_pots.json'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\cdlib\\algorithms\\crisp_partition.py\u001b[0m in \u001b[0;36mrber_pots\u001b[1;34m(g_original, initial_membership, weights, node_sizes, resolution_parameter)\u001b[0m\n\u001b[0;32m    470\u001b[0m         \u001b[1;32mraise\u001b[0m \u001b[0mModuleNotFoundError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Optional dependency not satisfied: install igraph to use the selected feature.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    471\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 472\u001b[1;33m     \u001b[0mg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconvert_graph_formats\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mg_original\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGraph\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    473\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    474\u001b[0m     part = leidenalg.find_partition(g, leidenalg.RBERVertexPartition,\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\cdlib\\utils.py\u001b[0m in \u001b[0;36mconvert_graph_formats\u001b[1;34m(graph, desired_format, directed)\u001b[0m\n\u001b[0;32m    197\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    198\u001b[0m         raise TypeError(\n\u001b[1;32m--> 199\u001b[1;33m             \"The graph object should be either a networkx or an igraph one.\")\n\u001b[0m\u001b[0;32m    200\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    201\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: The graph object should be either a networkx or an igraph one."
+     ]
+    }
+   ],
+   "source": [
+    "rber_pots = cd.rber_pots(G)\n",
+    "readwrite.write_community_json(rber_pots,'../data/communities/rber_pots.json')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "editorial-compensation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assign(G,rber_pots,'rber_pots')\n",
+    "for node in G.nodes:\n",
+    "    df.loc[node,'rber_pots'] = str(G.nodes[node]['rber_pots'])\n",
+    "\n",
+    "sns.scatterplot(data = df[df.rber_pots.astype(int)<10], x='longitude',y='latitude',hue='rber_pots')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "delayed-eating",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "mounted-mozambique",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1307,7 +1423,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
+   "id": "speaking-active",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 {}\n",
+      "1 {}\n",
+      "2 {}\n",
+      "3 {}\n",
+      "4 {}\n",
+      "5 {}\n",
+      "6 {}\n",
+      "8 {}\n",
+      "9 {}\n",
+      "14 {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "G = nx.read_weighted_edgelist('../data/connected.weighted.edgelist')\n",
+    "G = nx.relabel_nodes(G, {node:int(node) for node in G.nodes}) \n",
+    "df = pd.read_csv('../data/connencted.csv',index_col=0)\n",
+    "maxW = max([ G.edges[edge]['weight'] for edge in G.edges]) \n",
+    "for edge in G.edges():\n",
+    "    # G.edges[edge]['dissimilarity'] = 10000 - G.edges[edge]['weight']\n",
+    "    G.edges[edge]['weight'] =  maxW+1 - G.edges[edge]['weight']\n",
+    "    \n",
+    "for node in list(G.nodes)[:10]: print(node,G.nodes[node])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "laughing-summit",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15003 15002\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(G), max([node for node in G.nodes]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "374321ce",
    "metadata": {},
    "outputs": [
@@ -1342,7 +1511,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,34 +1522,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "ddafe5eb",
+   "execution_count": 29,
+   "id": "intellectual-lodging",
    "metadata": {},
    "outputs": [],
    "source": [
-    "attributes = ['latitude','longitude']#,'covidMeasure','travellersChoice','claimed','menu','N_reviews']"
+    "for node in G.nodes: G.nodes[node]['province'] = None#df.loc[node,'province']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
+   "id": "overall-navigation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "provincemapping = {e:i for i,e in enumerate(df.province.unique())}\n",
+    "for node in G.nodes:\n",
+    "    G.nodes[node]['provint'] = provincemapping[df.loc[node,'province']]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bearing-kansas",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "provincemapi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ddafe5eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attributes = ['latitude','longitude','N_reviews','covidMeasure','travellersChoice','claimed','menu']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "0823f240",
    "metadata": {},
    "outputs": [],
    "source": [
     "for node in G.nodes:\n",
     "    for attr in attributes: \n",
-    "        G.nodes[node][attr] = df.loc[node,attr]"
+    "        G.nodes[node][attr] = float(df.loc[node,attr])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 34,
+   "id": "possible-commercial",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 {'covidMeasure': 0, 'travellersChoice': 0, 'claimed': 1, 'menu': 0}\n",
+      "1 {'covidMeasure': 1, 'travellersChoice': 1, 'claimed': 1, 'menu': 1}\n",
+      "2 {'covidMeasure': 0, 'travellersChoice': 1, 'claimed': 1, 'menu': 0}\n",
+      "3 {'covidMeasure': 0, 'travellersChoice': 0, 'claimed': 1, 'menu': 0}\n",
+      "4 {'covidMeasure': 0, 'travellersChoice': 0, 'claimed': 1, 'menu': 1}\n",
+      "5 {'covidMeasure': 0, 'travellersChoice': 1, 'claimed': 0, 'menu': 0}\n",
+      "6 {'covidMeasure': 0, 'travellersChoice': 0, 'claimed': 1, 'menu': 0}\n",
+      "8 {'covidMeasure': 0, 'travellersChoice': 1, 'claimed': 1, 'menu': 0}\n",
+      "9 {'covidMeasure': 0, 'travellersChoice': 0, 'claimed': 1, 'menu': 0}\n",
+      "14 {'covidMeasure': 0, 'travellersChoice': 1, 'claimed': 0, 'menu': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for node in list(G.nodes)[:10]: print(node,G.nodes[node])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "d235cd1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = { node : {attr:G.nodes[node][attr] for attr in attributes} for node in G.nodes()}\n"
+    "labels = { int(node) : {attr:int(G.nodes[node][attr]) for attr in attributes} for node in G.nodes()}\n"
    ]
   },
   {
@@ -1390,7 +1619,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eva = cd.eva(G, labels , weight='dissimilarity')"
+    "\n",
+    "ilouvain = cd.ilouvain(G,labels,{node:node for node in G.nodes})"
    ]
   },
   {
@@ -1399,7 +1629,10 @@
    "id": "ef447b7a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "readwrite.write_community_json(label_propagation,'../data/communities/ilouvain.json')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1940,7 +2173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
