--- a/community_discovery/codes/Years.ipynb
+++ b/community_discovery/codes/Years.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "11fca8f1",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,12 @@
       "2013.weighted.edgelist\n",
       "2014.weighted.edgelist\n",
       "2015.weighted.edgelist\n",
-      "2016.weighted.edgelist\n"
+      "2016.weighted.edgelist\n",
+      "2017.weighted.edgelist\n",
+      "2018.weighted.edgelist\n",
+      "2019.weighted.edgelist\n",
+      "2020.weighted.edgelist\n",
+      "2021.weighted.edgelist\n"
      ]
     }
    ],
@@ -107,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "42f2ee3f",
    "metadata": {},
    "outputs": [],
@@ -153,6 +158,14 @@
     "\n",
     "readwrite.write_community_json(tiles,'../data/years_tiles.json')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "quantitative-straight",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -171,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
