best demon and other evaluations

--- a/network_building/year snapshots.ipynb
+++ b/network_building/year snapshots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "amber-adjustment",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "shaped-tokyo",
    "metadata": {},
    "outputs": [],
@@ -284,9 +284,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99495fb7",
+   "metadata": {},
+   "source": [
+    "### BackBoning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "particular-samoa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2007  -> edges: 0\n",
+      "2008  -> edges: 0\n",
+      "2009  -> edges: 7\n",
+      "2010  -> edges: 45\n",
+      "2011  -> edges: 1846\n",
+      "2012  -> edges: 19305\n",
+      "2013  -> edges: 56023\n",
+      "2014  -> edges: 85569\n",
+      "2015  -> edges: 193365\n",
+      "2016  -> edges: 322918\n",
+      "2017  -> edges: 354174\n",
+      "2018  -> edges: 310313\n",
+      "2019  -> edges: 289450\n",
+      "2020  -> edges: 75629\n",
+      "2021  -> edges: 245\n"
+     ]
+    }
+   ],
+   "source": [
+    "for y in years:\n",
+    "    with open(f\"../data/years/{str(y)}.weighted.edgelist\",'r') as f:\n",
+    "        print(y,' -> edges:',len(f.readlines()))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "particular-samoa",
+   "id": "7d93c33c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8194a688",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for y in years:\n",
+    "    df = pd.read_csv(f\"../data/years/{str(y)}.weighted.edgelist\",sep= ' ',names=['srg','trg','w'])\n",
+    "    df.to_csv(f\"../data/years/{str(y)}.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "27c36f33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for y in range(2009,2022):\n",
+    "    if y not in range(2015,2020):\n",
+    "        G = nx.read_weighted_edgelist(f\"../data/years/{str(y)}.weighted.edgelist\")\n",
+    "        nx.write_adjlist(G,f\"../community_discovery/data/years/{str(y)}.adjlist\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "47e9997f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bb' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-3984fc429461>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnnodes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnnedges\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../data/years/2015.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcolumn_of_interest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mundirected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'bb' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "table, nnodes, nnedges = bb.read('../data/years/2015.csv',column_of_interest='w',sep= ' ', undirected = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "841d49cf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -308,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
