bad tiles result fro dynamic community discovery over all years graphs backboned

--- a/network_building/year snapshots.ipynb
+++ b/network_building/year snapshots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "amber-adjustment",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "shaped-tokyo",
    "metadata": {},
    "outputs": [],
@@ -293,6 +293,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "legislative-swaziland",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import backboning \n",
+    "from backboning import backboning as bb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "particular-samoa",
    "metadata": {},
@@ -335,14 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8194a688",
    "metadata": {},
    "outputs": [],
    "source": [
     "for y in years:\n",
-    "    df = pd.read_csv(f\"../data/years/{str(y)}.weighted.edgelist\",sep= ' ',names=['srg','trg','w'])\n",
-    "    df.to_csv(f\"../data/years/{str(y)}.csv\",index=False)"
+    "    df = pd.read_csv(f\"../data/years/{str(y)}.weighted.edgelist\",sep= ' ',names=['src','trg','w'])\n",
+    "    df.to_csv(f\"../data/years/{str(y)}.csv\", index=False)"
    ]
   },
   {
@@ -351,40 +362,244 @@
    "id": "27c36f33",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "exotic-vintage",
+   "metadata": {},
    "source": [
-    "for y in range(2009,2022):\n",
-    "    if y not in range(2015,2020):\n",
-    "        G = nx.read_weighted_edgelist(f\"../data/years/{str(y)}.weighted.edgelist\")\n",
-    "        nx.write_adjlist(G,f\"../community_discovery/data/years/{str(y)}.adjlist\")"
+    "#### 2015"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "47e9997f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'bb' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-3984fc429461>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnnodes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnnedges\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../data/years/2015.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcolumn_of_interest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mundirected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'bb' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Calculating NC score...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90204\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "table, nnodes, nnedges = bb.read('../data/years/2015.csv',column_of_interest='w',sep= ' ', undirected = True)"
+    "table, nnodes, nnedges = bb.read('../data/years/2015.csv',column_of_interest='w',sep= ',', undirected = True)\n",
+    "nc_table = bb.noise_corrected(table)\n",
+    "\n",
+    "nc_backbone = bb.thresholding(nc_table,30)\n",
+    "print(len(nc_backbone))\n",
+    "nc_backbone.drop('score',axis=1,inplace=True)\n",
+    "nc_backbone.to_csv('../data/years/2015bb.weighted.edgelist',index=False,header=False,sep= ' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "grateful-selection",
+   "metadata": {},
+   "source": [
+    " #### 2016"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "asian-collector",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Calculating NC score...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92469\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "table, nnodes, nnedges = bb.read('../data/years/2016.csv',column_of_interest='w',sep= ',', undirected = True)\n",
+    "nc_table = bb.noise_corrected(table)\n",
+    "\n",
+    "nc_backbone = bb.thresholding(nc_table,55)\n",
+    "print(len(nc_backbone))\n",
+    "nc_backbone.drop('score',axis=1,inplace=True)\n",
+    "nc_backbone.to_csv('../data/years/2016bb.weighted.edgelist',index=False,header=False,sep= ' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "developmental-gathering",
+   "metadata": {},
+   "source": [
+    "#### 2017"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "offshore-longer",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Calculating NC score...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93468\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "table, nnodes, nnedges = bb.read('../data/years/2017.csv',column_of_interest='w',sep= ',', undirected = True)\n",
+    "nc_table = bb.noise_corrected(table)\n",
+    "\n",
+    "nc_backbone = bb.thresholding(nc_table,70)\n",
+    "print(len(nc_backbone))\n",
+    "nc_backbone.drop('score',axis=1,inplace=True)\n",
+    "nc_backbone.to_csv('../data/years/2017bb.weighted.edgelist',index=False,header=False,sep= ' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "pleasant-laptop",
+   "metadata": {},
+   "source": [
+    "#### 2018"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "compact-hepatitis",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Calculating NC score...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "104198\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "table, nnodes, nnedges = bb.read('../data/years/2018.csv',column_of_interest='w',sep= ',', undirected = True)\n",
+    "nc_table = bb.noise_corrected(table)\n",
+    "\n",
+    "nc_backbone = bb.thresholding(nc_table,70)\n",
+    "print(len(nc_backbone))\n",
+    "nc_backbone.drop('score',axis=1,inplace=True)\n",
+    "nc_backbone.to_csv('../data/years/2018bb.weighted.edgelist',index=False,header=False,sep= ' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "opened-certification",
+   "metadata": {},
+   "source": [
+    "#### 2019"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "tropical-montreal",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Calculating NC score...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98616\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "table, nnodes, nnedges = bb.read('../data/years/2019.csv',column_of_interest='w',sep= ',', undirected = True)\n",
+    "nc_table = bb.noise_corrected(table)\n",
+    "\n",
+    "nc_backbone = bb.thresholding(nc_table,85)\n",
+    "print(len(nc_backbone))\n",
+    "nc_backbone.drop('score',axis=1,inplace=True)\n",
+    "nc_backbone.to_csv('../data/years/2019bb.weighted.edgelist',index=False,header=False,sep= ' ')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "841d49cf",
+   "id": "complimentary-berry",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "strategic-neighborhood",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "former-association",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for y in range(2009,2022):\n",
+    "    if y not in range(2015,2020):\n",
+    "        G = nx.read_weighted_edgelist(f\"../data/years/{str(y)}.weighted.edgelist\")\n",
+    "        nx.write_weighted_edgelist(G,f\"../community_discovery/data/years/{str(y)}.weighted.edgelist\")\n",
+    "    else:\n",
+    "        G = nx.read_weighted_edgelist(f\"../data/years/{str(y)}bb.weighted.edgelist\")\n",
+    "        nx.write_weighted_edgelist(G,f\"../community_discovery/data/years/{str(y)}.weighted.edgelist\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "vulnerable-tackle",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -406,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
