--- a/network_analysis/codes/3 Network_Analysis_Barabási–Albert_.ipynb
+++ b/network_analysis/codes/3 Network_Analysis_Barabási–Albert_.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "middle-broad",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "id": "middle-broad"
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -20,44 +21,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "canadian-complexity",
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "id": "canadian-complexity"
+   },
    "outputs": [],
    "source": [
-    "filename = \"../data/info_er.json\""
+    "filename = \"C:/Users/Ilenia/Desktop/university/SNA/info_ba.json\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "three-conspiracy",
-   "metadata": {},
+   "metadata": {
+    "id": "three-conspiracy"
+   },
    "source": [
-    "# Erdős–Rényi Network\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "maritime-moderator",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = nx.read_adjlist(\"../data/ER.adjlist\")"
+    "# Barabási–Albert Model\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "increasing-darwin",
-   "metadata": {},
+   "metadata": {
+    "id": "maritime-moderator"
+   },
+   "outputs": [],
+   "source": [
+    "G = nx.read_adjlist(\"C:/Users/Ilenia/Desktop/university/SNA/data/BA.adjlist\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "id": "increasing-darwin",
+    "outputId": "0fa3a8ff-b021-4fec-f98b-15ef0e188076"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15690 6955000\n",
-      "0.0565078681823775\n"
+      "15077 135612\n",
+      "0.0011932379382370286\n"
      ]
     }
    ],
@@ -71,9 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "optimum-glory",
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "id": "optimum-glory"
+   },
    "outputs": [],
    "source": [
     "data = dict()\n",
@@ -87,17 +94,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adjacent-louis",
-   "metadata": {},
+   "metadata": {
+    "id": "adjacent-louis"
+   },
    "source": [
     "## Degree distribution analysis\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "excess-minutes",
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "id": "excess-minutes"
+   },
    "outputs": [],
    "source": [
     "degrees = [(n,d) for n, d in G.degree()]"
@@ -105,9 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "respected-party",
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "id": "respected-party"
+   },
    "outputs": [],
    "source": [
     "with open(filename,'r') as jf:\n",
@@ -121,24 +131,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "functioning-freight",
-   "metadata": {},
+   "metadata": {
+    "id": "functioning-freight"
+   },
    "source": [
     "## Connected components analysis\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "improving-auditor",
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "id": "improving-auditor",
+    "outputId": "191021b5-1354-494e-a046-6ac81b758fd0"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average componets size:  3922.5\n",
-      "[15684, 2, 2, 2] etc...\n"
+      "average componets size:  15077.0\n",
+      "[15077] etc...\n"
      ]
     }
    ],
@@ -151,9 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "sacred-conducting",
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "id": "sacred-conducting"
+   },
    "outputs": [],
    "source": [
     "with open(filename,'r') as jf:\n",
@@ -167,9 +181,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "baking-investigator",
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "id": "baking-investigator"
+   },
    "outputs": [],
    "source": [
     "C = G.subgraph(components[0])\n"
@@ -177,17 +192,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "logical-director",
-   "metadata": {},
+   "metadata": {
+    "id": "logical-director"
+   },
    "source": [
     "## Path analysis\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "binary-wings",
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "id": "binary-wings"
+   },
    "outputs": [],
    "source": [
     "avg_shortest_path = nx.average_shortest_path_length(C)"
@@ -195,9 +212,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "recreational-donor",
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "id": "recreational-donor"
+   },
    "outputs": [],
    "source": [
     "with open(filename,'r') as jf:\n",
@@ -210,21 +228,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "sized-tutorial",
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "diameter= nx.diameter(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(filename,'r') as jf:\n",
+    "    data = json.load(jf)\n",
+    "\n",
+    "data['diamter'] = diameter\n",
+    "\n",
+    "with open(filename,'w') as jf:\n",
+    "    json.dump(data,jf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "sized-tutorial"
+   },
    "source": [
     "## Clustering Coefficient, Density analysis\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "lasting-conjunction",
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "id": "lasting-conjunction"
+   },
    "outputs": [],
    "source": [
-    "clusterings = [(n,d) for n,d in nx.clustering(G)]\n",
+    "clusterings =  nx.clustering(G)\n",
     "\n",
     "with open(filename,'r') as jf:\n",
     "    data = json.load(jf)\n",
@@ -236,41 +280,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "personal-correlation",
-   "metadata": {},
-   "source": [
-    "## Centrality analysis"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "median-plumbing",
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "id": "hlHujymaBW1y"
+   },
    "outputs": [],
    "source": [
-    "degree_centrality = nx.degree_centrality(G)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "worldwide-chicken",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "average_clustering =  nx.average_clustering(G)\n",
+    "\n",
     "with open(filename,'r') as jf:\n",
     "    data = json.load(jf)\n",
     "\n",
-    "data['degree_centrality'] = degree_centrality \n",
+    "data['average clusterings'] =average_clustering\n",
     "\n",
     "with open(filename,'w') as jf:\n",
     "    json.dump(data,jf)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "name": "Network Analysis Barabási–Albert .ipynb",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -286,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
