--- a/network_analysis/codes/3 Network_Analysis_Watts-Strogatz.ipynb
+++ b/network_analysis/codes/3 Network_Analysis_Watts-Strogatz.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "middle-broad",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "id": "middle-broad"
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -13,51 +14,58 @@
     "import math\n",
     "import collections\n",
     "import networkx as nx\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "\n"
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "id": "canadian-complexity"
+   },
+   "outputs": [],
+   "source": [
+    "filename = 'C:/Users/io/Desktop/info_wa.json'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "three-conspiracy"
+   },
+   "source": [
+    "# Watts-Strogatz Network\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "canadian-complexity",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 353
+    },
+    "id": "maritime-moderator",
+    "outputId": "d61ae8a7-6478-4a8e-e2f4-cc04f757d3d5"
+   },
    "outputs": [],
    "source": [
-    "filename = \"../data/info_cm.json\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "three-conspiracy",
-   "metadata": {},
-   "source": [
-    "# Configuration Model\n"
+    "G = nx.read_adjlist('C:/Users/io/Desktop/WS.adjlist')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "maritime-moderator",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = nx.read_adjlist(\"../data/CM.adjlist\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "increasing-darwin",
-   "metadata": {},
+   "metadata": {
+    "id": "increasing-darwin"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15690 6955000\n",
-      "0.0565078681823775\n"
+      "15077 135693\n",
+      "0.0011939506500397983\n"
      ]
     }
    ],
@@ -71,13 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "optimum-glory",
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "id": "optimum-glory"
+   },
    "outputs": [],
    "source": [
     "data = dict()\n",
-    "data['name'] = 'Real world'\n",
+    "data['name'] = 'Watts-Strogatz'\n",
     "data['N_nodes'] = N\n",
     "data['N_edges'] = L\n",
     "data['density'] = density\n",
@@ -87,17 +96,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adjacent-louis",
-   "metadata": {},
+   "metadata": {
+    "id": "adjacent-louis"
+   },
    "source": [
     "## Degree distribution analysis\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "excess-minutes",
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "id": "excess-minutes"
+   },
    "outputs": [],
    "source": [
     "degrees = [(n,d) for n, d in G.degree()]"
@@ -105,9 +116,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "respected-party",
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "id": "respected-party"
+   },
    "outputs": [],
    "source": [
     "with open(filename,'r') as jf:\n",
@@ -121,24 +133,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "functioning-freight",
-   "metadata": {},
+   "metadata": {
+    "id": "functioning-freight"
+   },
    "source": [
     "## Connected components analysis\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "improving-auditor",
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "id": "improving-auditor"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average componets size:  3922.5\n",
-      "[15684, 2, 2, 2] etc...\n"
+      "average componets size:  15077.0\n",
+      "[15077] etc...\n"
      ]
     }
    ],
@@ -151,9 +165,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "sacred-conducting",
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "id": "sacred-conducting"
+   },
    "outputs": [],
    "source": [
     "with open(filename,'r') as jf:\n",
@@ -167,9 +182,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "baking-investigator",
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "id": "baking-investigator"
+   },
    "outputs": [],
    "source": [
     "C = G.subgraph(components[0])\n"
@@ -177,17 +193,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "logical-director",
-   "metadata": {},
+   "metadata": {
+    "id": "logical-director"
+   },
    "source": [
     "## Path analysis\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "binary-wings",
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "id": "binary-wings"
+   },
    "outputs": [],
    "source": [
     "avg_shortest_path = nx.average_shortest_path_length(C)"
@@ -195,14 +213,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "recreational-donor",
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "id": "recreational-donor"
+   },
    "outputs": [],
    "source": [
-    "with open(filename,'r') as jf:\n",
-    "    data = json.load(jf)\n",
-    "\n",
     "data['avg_shortest_path'] = avg_shortest_path\n",
     "\n",
     "with open(filename,'w') as jf:\n",
@@ -210,21 +226,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "id": "tYKwwj9UIQbl"
+   },
+   "outputs": [],
+   "source": [
+    "diameter= nx.diameter(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "id": "NYI-3m2yIC30"
+   },
+   "outputs": [],
+   "source": [
+    "with open(filename, 'r') as jf:\n",
+    "    data=json.load(jf)\n",
+    "\n",
+    "data['diameter']=diameter\n",
+    "with open(filename, 'w') as jf:\n",
+    "      json.dump(data,jf)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "sized-tutorial",
-   "metadata": {},
+   "metadata": {
+    "id": "sized-tutorial"
+   },
    "source": [
     "## Clustering Coefficient, Density analysis\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "lasting-conjunction",
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "id": "lasting-conjunction"
+   },
    "outputs": [],
    "source": [
-    "clusterings = [(n,d) for n,d in nx.clustering(G)]\n",
+    "clusterings = nx.clustering(G)\n",
     "\n",
     "with open(filename,'r') as jf:\n",
     "    data = json.load(jf)\n",
@@ -236,41 +282,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "personal-correlation",
-   "metadata": {},
-   "source": [
-    "## Centrality analysis"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "median-plumbing",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "degree_centrality = nx.degree_centrality(G)"
+    "average_clustering=nx.average_clustering(G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "worldwide-chicken",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(filename,'r') as jf:\n",
     "    data = json.load(jf)\n",
     "\n",
-    "data['degree_centrality'] = degree_centrality \n",
+    "data['average clusterings'] =average_clustering\n",
     "\n",
     "with open(filename,'w') as jf:\n",
     "    json.dump(data,jf)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "name": "Network Analysis Erdős–Rényi .ipynb",
+   "provenance": [],
+   "toc_visible": true
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -286,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
