implementing new dynamic community algorithm

--- a/network_building/year snapshots.ipynb
+++ b/network_building/year snapshots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "amber-adjustment",
    "metadata": {},
    "outputs": [],
@@ -593,7 +593,7 @@
     "        nx.write_weighted_edgelist(G,f\"../community_discovery/data/years/{str(y)}.weighted.edgelist\")\n",
     "    else:\n",
     "        G = nx.read_weighted_edgelist(f\"../data/years/{str(y)}bb.weighted.edgelist\")\n",
-    "        nx.write_weighted_edgelist(G,f\"../community_discovery/data/years/{str(y)}.weighted.edgelist\")"
+    "        nx.write_weighted_edgelist(G,f\"../community_discovery/data/years/{str(y)}bb.weighted.edgelist\")"
    ]
   },
   {
