--- a/community_discovery/codes/Months.ipynb
+++ b/community_discovery/codes/Months.ipynb
@@ -285,62 +285,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "96d387e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = dn.read_snapshots('../data/years.weighted.edgelist', nodetype=int, timestamptype=int)\n"
+    "G = dn.read_snapshots('../data/months.weighted.edgelist', nodetype=int, timestamptype=int)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "cfa80a24",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-39-6987c9f65458>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtiles\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\cdlib\\algorithms\\temporal_partition.py\u001b[0m in \u001b[0;36mtiles\u001b[1;34m(dg, obs)\u001b[0m\n\u001b[0;32m     35\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m             \u001b[0mcommunities\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34mf\"{t}_{k}\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 37\u001b[1;33m         \u001b[0msg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime_slice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mobs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     38\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m         \u001b[0mnc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNamedClustering\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcommunities\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'TILES'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m'obs'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mobs\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moverlap\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\dynetx\\classes\\dyngraph.py\u001b[0m in \u001b[0;36mtime_slice\u001b[1;34m(self, t_from, t_to)\u001b[0m\n\u001b[0;32m   1052\u001b[0m             \u001b[0mf_from\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mt_from\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1053\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1054\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mts\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m't'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1055\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mi_to\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0ma\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mf_from\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1056\u001b[0m                     \u001b[1;32mcontinue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tiles = cd.tiles(G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7d6a1bc0",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'TemporalClustering' object has no attribute 'communities'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-114536956b54>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mreadwrite\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite_community_json\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtiles\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'../data/years_tiles.json'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\cdlib\\readwrite\\io.py\u001b[0m in \u001b[0;36mwrite_community_json\u001b[1;34m(communities, path, zip)\u001b[0m\n\u001b[0;32m     89\u001b[0m     \"\"\"\n\u001b[0;32m     90\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 91\u001b[1;33m     partition = {\"communities\": communities.communities, \"algorithm\": communities.method_name,\n\u001b[0m\u001b[0;32m     92\u001b[0m                  \"params\": communities.method_parameters, \"overlap\": communities.overlap, \"coverage\": communities.node_coverage}\n\u001b[0;32m     93\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'TemporalClustering' object has no attribute 'communities'"
-     ]
-    }
-   ],
+   "execution_count": 4,
+   "id": "fewer-shoot",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "\n",
-    "readwrite.write_community_json(tiles,'../data/years_tiles.json')"
+    "with open('../data/months_tiles.json','w+') as jf:\n",
+    "    json.dump(tiles.to_json(),jf)"
    ]
   },
   {
@@ -350,12 +321,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i,c in tiles.clusterings.items(): readwrite.write_community_json(c,f'../data/years/{str(i)}.json')"
+    "for i,c in tiles.clusterings.items(): readwrite.write_community_json(c,f'../data/months/{str(i)}.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "turkish-concentration",
    "metadata": {
     "scrolled": true
@@ -378,23 +349,123 @@
       "10\n",
       "11\n",
       "12\n",
-      "13\n"
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "100\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "105\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "116\n",
+      "117\n",
+      "118\n",
+      "119\n",
+      "120\n",
+      "121\n",
+      "122\n",
+      "123\n",
+      "124\n"
      ]
     }
    ],
    "source": [
     "for c in tiles.clusterings: print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "fewer-shoot",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../data/years/tiles.json','w+') as jf:\n",
-    "    json.dump(tiles.to_json(),jf)"
    ]
   },
   {
@@ -1020,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "prompt-estate",
    "metadata": {},
    "outputs": [
@@ -1028,26 +1099,137 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 )  0  ->  []\n",
-      "1 )  0  ->  []\n",
-      "2 )  10  ->  [0, 0, 0, 0, 0, 0, 0, 4, 0, 0]\n",
-      "3 )  311  ->  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "4 )  622  ->  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "5 )  799  ->  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0]\n",
-      "6 )  736  ->  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "7 )  806  ->  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "8 )  952  ->  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "9 )  1014  ->  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0]\n",
-      "10 )  1153  ->  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "11 )  1352  ->  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "12 )  494  ->  [300, 267, 240, 221, 109, 102, 99, 93, 92, 91, 84, 76, 73, 69, 60, 55, 54, 53, 52, 46]\n",
-      "13 )  494  ->  [300, 267, 240, 221, 109, 102, 99, 93, 92, 91, 84, 76, 73, 69, 60, 55, 54, 53, 52, 46]\n"
+      "0 )  0  ->  0\n",
+      "1 )  0  ->  0\n",
+      "2 )  0  ->  0\n",
+      "3 )  0  ->  0\n",
+      "4 )  0  ->  0\n",
+      "5 )  0  ->  0\n",
+      "6 )  0  ->  0\n",
+      "7 )  0  ->  0\n",
+      "8 )  0  ->  0\n",
+      "9 )  0  ->  0\n",
+      "10 )  1  ->  0\n",
+      "11 )  1  ->  0\n",
+      "12 )  1  ->  0\n",
+      "13 )  1  ->  0\n",
+      "14 )  1  ->  0\n",
+      "15 )  2  ->  0\n",
+      "16 )  3  ->  6\n",
+      "17 )  4  ->  6\n",
+      "18 )  8  ->  6\n",
+      "19 )  13  ->  6\n",
+      "20 )  36  ->  0\n",
+      "21 )  50  ->  0\n",
+      "22 )  55  ->  0\n",
+      "23 )  61  ->  0\n",
+      "24 )  65  ->  0\n",
+      "25 )  67  ->  0\n",
+      "26 )  73  ->  0\n",
+      "27 )  79  ->  0\n",
+      "28 )  89  ->  0\n",
+      "29 )  107  ->  0\n",
+      "30 )  131  ->  0\n",
+      "31 )  174  ->  0\n",
+      "32 )  248  ->  0\n",
+      "33 )  292  ->  0\n",
+      "34 )  303  ->  0\n",
+      "35 )  316  ->  0\n",
+      "36 )  279  ->  0\n",
+      "37 )  298  ->  0\n",
+      "38 )  305  ->  0\n",
+      "39 )  320  ->  0\n",
+      "40 )  354  ->  0\n",
+      "41 )  380  ->  0\n",
+      "42 )  397  ->  0\n",
+      "43 )  453  ->  0\n",
+      "44 )  526  ->  0\n",
+      "45 )  490  ->  0\n",
+      "46 )  493  ->  0\n",
+      "47 )  527  ->  0\n",
+      "48 )  513  ->  0\n",
+      "49 )  583  ->  0\n",
+      "50 )  572  ->  0\n",
+      "51 )  628  ->  0\n",
+      "52 )  677  ->  0\n",
+      "53 )  677  ->  0\n",
+      "54 )  767  ->  0\n",
+      "55 )  861  ->  0\n",
+      "56 )  872  ->  0\n",
+      "57 )  879  ->  0\n",
+      "58 )  1026  ->  0\n",
+      "59 )  1170  ->  0\n",
+      "60 )  1251  ->  0\n",
+      "61 )  1314  ->  0\n",
+      "62 )  1357  ->  0\n",
+      "63 )  1386  ->  0\n",
+      "64 )  1068  ->  0\n",
+      "65 )  1138  ->  0\n",
+      "66 )  1085  ->  6\n",
+      "67 )  1332  ->  0\n",
+      "68 )  1062  ->  0\n",
+      "69 )  1039  ->  0\n",
+      "70 )  1163  ->  0\n",
+      "71 )  1163  ->  0\n",
+      "72 )  1196  ->  0\n",
+      "73 )  1078  ->  0\n",
+      "74 )  1194  ->  0\n",
+      "75 )  1244  ->  0\n",
+      "76 )  1427  ->  0\n",
+      "77 )  1253  ->  0\n",
+      "78 )  1411  ->  0\n",
+      "79 )  1529  ->  0\n",
+      "80 )  1350  ->  0\n",
+      "81 )  1208  ->  0\n",
+      "82 )  1366  ->  0\n",
+      "83 )  1359  ->  0\n",
+      "84 )  1477  ->  0\n",
+      "85 )  1586  ->  0\n",
+      "86 )  1472  ->  0\n",
+      "87 )  1534  ->  0\n",
+      "88 )  1480  ->  0\n",
+      "89 )  1452  ->  0\n",
+      "90 )  1648  ->  0\n",
+      "91 )  1699  ->  0\n",
+      "92 )  1711  ->  0\n",
+      "93 )  1284  ->  0\n",
+      "94 )  1421  ->  0\n",
+      "95 )  1376  ->  0\n",
+      "96 )  1375  ->  0\n",
+      "97 )  1322  ->  0\n",
+      "98 )  1365  ->  0\n",
+      "99 )  1307  ->  32\n",
+      "100 )  1369  ->  47\n",
+      "101 )  1452  ->  0\n",
+      "102 )  1436  ->  0\n",
+      "103 )  1581  ->  0\n",
+      "104 )  1561  ->  12\n",
+      "105 )  1405  ->  0\n",
+      "106 )  1398  ->  0\n",
+      "107 )  1471  ->  0\n",
+      "108 )  1269  ->  0\n",
+      "109 )  1401  ->  20\n",
+      "110 )  1440  ->  0\n",
+      "111 )  1264  ->  188\n",
+      "112 )  1265  ->  98\n",
+      "113 )  1271  ->  98\n",
+      "114 )  1426  ->  13\n",
+      "115 )  1711  ->  13\n",
+      "116 )  1825  ->  13\n",
+      "117 )  1788  ->  3\n",
+      "118 )  1725  ->  8110\n",
+      "119 )  1728  ->  8110\n",
+      "120 )  1729  ->  8110\n",
+      "121 )  1733  ->  8110\n",
+      "122 )  1733  ->  8110\n",
+      "123 )  1733  ->  8110\n",
+      "124 )  1733  ->  8110\n"
      ]
     }
    ],
    "source": [
     "for i,comms in tiles.clusterings.items():\n",
-    "    print(i,') ',len(comms.communities),' -> ',[ len(c) for c in comms.communities[:20]])\n",
+    "    print(i,') ',len(comms.communities),' -> ',sum([ len(c) for c in comms.communities[:20]]))\n",
     "   \n",
     "    "
    ]
