start link prediction random forest

--- a/link_prediction/codes/Untitled.ipynb
+++ b/link_prediction/codes/Untitled.ipynb
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "25f377e4",
+   "id": "0133d974",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dc539555",
+   "id": "26baf4f1",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "ad2bb1f7",
+   "id": "6d926c20",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b80d590f",
+   "id": "3b4fb3be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "4f786a15",
+   "id": "717efbcd",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6b25f05c",
+   "id": "3fb5b642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "acfa4689",
+   "id": "68b5016e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "fcc81104",
+   "id": "2e0775ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2e85cb82",
+   "id": "0aa3262f",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2b8499e",
+   "id": "0e6da45d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90f945ff",
+   "id": "461b86ba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4fb2715e",
+   "id": "bf1d6f1e",
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "27c96ed6",
+   "id": "610995b7",
    "metadata": {},
    "outputs": [
     {
@@ -1314,21 +1314,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "42d51235",
+   "execution_count": 69,
+   "id": "8fb5d670",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfg.to_csv('../data/linkPrediciton.csv')"
+    "dfg.to_csv('../data/linkPrediction.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f7677b21",
+   "id": "71d7754d",
    "metadata": {},
    "source": [
     "### Train Test split"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2eda4099",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "dfg = pd.read_csv('../data/linkPrediction.csv',index_col=0)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "34497df0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split, cross_val_score \n",
+    "\n",
+    "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
+    "from sklearn.metrics import roc_curve, auc, roc_auc_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "244a28ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    136646\n",
+       "1    136646\n",
+       "Name: connected, dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfg['connected'] = 1\n",
+    "dfg.loc[dfg['weight'] ==0,'connected'] = 0\n",
+    "dfg.connected.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "d9f852af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['u', 'v', 'weight', 'province', 'city', 'geoDistance', 'reviewsDiff',\n",
+       "       'scoreDiff', 'priceDiff', 'reviewsSum', 'scoreSum', 'priceSum',\n",
+       "       'specialDiets', 'cuisines', 'menu', 'covidMeasure', 'travellersChoice',\n",
+       "       'claimed', 'connected'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfg.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "80252149",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attributes = ['province', 'city', 'geoDistance', 'reviewsDiff',\n",
+    "       'scoreDiff', 'priceDiff', 'reviewsSum', 'scoreSum', 'priceSum',\n",
+    "       'specialDiets', 'cuisines', 'menu', 'covidMeasure', 'travellersChoice',\n",
+    "       'claimed'] \n",
+    "target =  'connected'\n",
+    "\n",
+    "X = dfg[attributes].values\n",
+    "y = dfg[target].values\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=100, stratify=y)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d1aca8e",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "04cb8773",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d20edd06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=100, criterion='gini', max_depth=None, min_samples_split=2, \n",
+    "                             min_samples_leaf=3, min_weight_fraction_leaf=0.0, max_features='auto', random_state=0)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "print('Accuracy %s' % accuracy_score(y_test, y_pred))\n",
+    "print('F1-score %s' % f1_score(y_test, y_pred, average=None))\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e08d553",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
